--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: ../infra/Dockerfile.frontend
     container_name: travel_planner_frontend
     env_file:
-      - .env
+      - ./frontend/.env
     ports:
       - "3000:3000"
     volumes:
@@ -21,7 +21,7 @@ services:
       dockerfile: ../infra/Dockerfile.backend
     container_name: travel_planner_backend
     env_file:
-      - .env
+      - ./backend/.env
     ports:
       - "8080:8080"
     volumes:
