--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
@@ -18,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.10.5",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "@supabase/supabase-js": "^2.45.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.21",
